grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__alt_empty.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"||ab\", 100)"
---
Ok(
    Alt(
        [
            Empty,
            Empty,
            Concat(
                [
                    Char(
                        'a',
                    ),
                    Char(
                        'b',
                    ),
                ],
            ),
        ],
    ),
)
