grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__char_set_class.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"[a-zA-Z_][\\w_]*\", 100)"
---
Ok(
    Concat(
        [
            CharSet(
                [
                    Range(
                        'a',
                        'z',
                    ),
                    Range(
                        'A',
                        'Z',
                    ),
                    Char(
                        '_',
                    ),
                ],
                false,
            ),
            Many(
                CharSet(
                    [
                        CharClass(
                            Word,
                        ),
                        Char(
                            '_',
                        ),
                    ],
                    false,
                ),
            ),
        ],
    ),
)
