grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__char_set_hyphen.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"([-[-z ---_-] )\", 100)"
---
Ok(
    Concat(
        [
            CharSet(
                [
                    Char(
                        '-',
                    ),
                    Range(
                        '[',
                        'z',
                    ),
                    Range(
                        ' ',
                        '-',
                    ),
                    Char(
                        '-',
                    ),
                    Char(
                        '_',
                    ),
                    Char(
                        '-',
                    ),
                ],
                false,
            ),
            Char(
                ' ',
            ),
        ],
    ),
)
