grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__char_set_negated.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"[^\\w]\", 100)"
---
Ok(
    CharSet(
        [
            CharClass(
                Word,
            ),
        ],
        true,
    ),
)
