grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__char_set_negated_caret.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"[^^]\", 100)"
---
Ok(
    CharSet(
        [
            Char(
                '^',
            ),
        ],
        true,
    ),
)
