grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__char_set_range.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"[0-9]+\", 100)"
---
Ok(
    Many1(
        CharSet(
            [
                Range(
                    '0',
                    '9',
                ),
            ],
        ),
    ),
)
