grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__char_set_right_bracket.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"([]a] )\", 100)"
---
Ok(
    Concat(
        [
            CharSet(
                [
                    Char(
                        ']',
                    ),
                    Char(
                        'a',
                    ),
                ],
                false,
            ),
            Char(
                ' ',
            ),
        ],
    ),
)
