grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__empty.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"\", 100)"
---
Ok(
    Empty,
)
