grammar/src/grammar_parser/snapshots/grammar__grammar_parser__regex__tests__regex__multi_repetition.snap
---
source: grammar/src/grammar_parser/regex.rs
expression: "parse_regex(r\"ab+?|\\d+*\", 100)"
---
Ok(
    Alt(
        [
            Concat(
                [
                    Char(
                        'a',
                    ),
                    Optional(
                        Many1(
                            Char(
                                'b',
                            ),
                        ),
                    ),
                ],
            ),
            Many(
                Many1(
                    CharClass(
                        Digit,
                    ),
                ),
            ),
        ],
    ),
)
